fix: line jumps on cursor movement when word wrap is enabled

--- a/src/styles/brackets_codemirror_override.less
+++ b/src/styles/brackets_codemirror_override.less
@@ -273,7 +273,6 @@ div.CodeMirror-cursors {
 
     .CodeMirror-matchingtag {
         background: @matching-bracket;
-        display: inline-block;
     }
 }
 
